# CapitalRedux-Rust-Services

./: .env  Cargo.toml
migrations/2023-04-08-170952_create_users/: up.sql
src/: main.rs
src/controllers/users/: create_user.rs
src/db/: db.rs  schema.rs
src/models/: user_model.rs
src/routes/: user_routes.rs
src/services/: jwt_service.rs  user_service.rs
src/utils/: jwt_utils.rs
