[package]
name = "capital"
version = "0.1.0"
edition = "2021"
authors = ["Awaiskhan"]


[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.0"
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
websocket = "0.23.0"
tokio-postgres = "0.7.2"
tokio = { version = "1.11.0", features = ["full"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.1"
chrono = "0.4.19"